<resources>
    <string name="app_name">Bookar</string>
    <string name="find">Find</string>
    <string name="saved">Saved</string>
    <string name="find_book">Find book</string>
    <string name="saved_books">Saved books</string>
    <string name="error_loading_books">Error while loading books...</string>
    <string name="type_book_title">Type in the book title!</string>
    <string name="noResult">No saved books</string>
    <string name="book_info">Book info</string>
    <string name="price">Price:</string>
    <string name="buy">Buy</string>
    <string name="authors">Authors:</string>
    <string name="categories">Categories:</string>
    <string name="description">Description:</string>
    <string name="preview">Preview</string>
    <string name="not_for_sale">Not for sale</string>
    <string name="cant_open_preview">Can\'t open preview</string>
</resources>
